# sos_helper

./: .gitignore  INSTALL.md  LICENSE.md  README.md  main.py  pyproject.toml  requirements.txt
other_scripts/: fewer_erases.py
serial_console/: __main__.py  app.py  command_registry.py  logging_subsystem.py  serial_manager.py  shell.py
serial_console/commands/: __init__.py  builtin.py  examples.py  sword_of_secrets.py  sword_of_secrets_spoilers_1.py  sword_of_secrets_spoilers_2.py  sword_of_secrets_spoilers_3.py
