[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "serial-console"
version = "0.1.0"
description = "Interactive serial-port console with programmatic command handling"
requires-python = ">=3.9"
dependencies = [
    "pyserial>=3.5",
    "pyserial-asyncio>=0.6",
    "prompt_toolkit>=3.0",
    "pycryptodome>=3.19",
]

[project.scripts]
serial-console = "serial_console.__main__:main"

[tool.setuptools.packages.find]
include = ["serial_console"]
